Fix small error in relative bounds calc for Chrome OS only.

The new relative bounds calculation code walks up the hierarchy applying
offsets and transforms to convert from the relative coordinates of one
object to the global screen coordinates.

This was broken for an obscure case where one of the parents of a node has
width and height zero because we were calling ComputeLocalNodeBounds on
every ancestor, when it was intended to only be called on the node you're
trying to get the bounds of.

BUG=641574

Review-Url: https://codereview.chromium.org/2285913002
Cr-Commit-Position: refs/heads/master@{#415461}

Former-commit-id: 06342c587b4cdedcf484f2660ea915024c6a4d1c